--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,3 +7,12 @@
 body {
 	font-family: "Lexend Deca", sans-serif;
 }
+
+.root {
+	min-height: 100vh;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
